--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: objective-c
-osx_image: xcode63
+osx_image: beta-xcode6.3
 branches:
   only:
     - master
-env:
-- LC_CTYPE=en_US.UTF-8 LANG=en_US.UTF-8
 before_install:
-- gem install xcpretty -N
+  - gem install xcpretty
 script:
 - set -o pipefail
-- xcodebuild -project "Example/SnappingStepperExample.xcodeproj" -scheme "Tests" -sdk iphonesimulator
-  -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=YES build | xcpretty -c
+- xcodebuild -project Example/SnappingStepperExample.xcodeproj -scheme Tests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO test | xcpretty -c
 - pod lib lint --quick
