--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: beta-xcode6.3
+osx_image: xcode7
 branches:
   only:
     - master
@@ -7,5 +7,4 @@ before_install:
   - gem install xcpretty
 script:
 - set -o pipefail
-- xcodebuild -project Example/SnappingStepperExample.xcodeproj -scheme Tests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6" ONLY_ACTIVE_ARCH=NO test | xcpretty -c
-- pod lib lint --quick
+- xcodebuild -project Example/SnappingStepperExample.xcodeproj -scheme Tests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPad 2" ONLY_ACTIVE_ARCH=NO test | xcpretty -c
