--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: objective-c
-osx_image: xcode7
+osx_image: xcode7.1
 branches:
   only:
     - master
 before_install:
   - gem install xcpretty
 script:
-- set -o pipefail
-- xcodebuild -project Example/SnappingStepperExample.xcodeproj -scheme Tests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPad 2" ONLY_ACTIVE_ARCH=NO test | xcpretty -c
+  - xcodebuild -version
+  - xcodebuild -project Example/SnappingStepperExample.xcodeproj -scheme Tests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPad 2" ONLY_ACTIVE_ARCH=YES test | xcpretty -c
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
