--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
   - gem install xcpretty
 script:
   - xcodebuild -version
-  - xcodebuild -project Example/SnappingStepperExample.xcodeproj -scheme Tests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPad 2" ONLY_ACTIVE_ARCH=YES test | xcpretty -c
+  - xcodebuild -project Example/SnappingStepperExample.xcodeproj -scheme Tests -sdk iphonesimulator -destination "OS=9.1,name=iPad 2" ONLY_ACTIVE_ARCH=YES test | xcpretty -c
 after_success:
   - bash <(curl -s https://codecov.io/bash)
