--- a/Example/SnappingStepperExample.xcodeproj/xcshareddata/xcschemes/SnappingStepperExample.xcscheme
+++ b/Example/SnappingStepperExample.xcodeproj/xcshareddata/xcschemes/SnappingStepperExample.xcscheme
@@ -76,6 +76,16 @@
                ReferencedContainer = "container:SnappingStepperExample.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CECF53721C0E4A1500DF6B92"
+               BuildableName = "UITests.xctest"
+               BlueprintName = "UITests"
+               ReferencedContainer = "container:SnappingStepperExample.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
