--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: objective-c
-osx_image: xcode7.1
+osx_image: xcode7.3
+before_install:
+  - gem install xcpretty
+  - gem install cocoapods
 branches:
   only:
     - master
-before_install:
-  - gem install xcpretty
 script:
+  - cd Example
+  - pod install
   - xcodebuild -version
-  - xcodebuild -project Example/SnappingStepperExample.xcodeproj -scheme Tests -sdk iphonesimulator -destination "OS=9.1,name=iPad 2" ONLY_ACTIVE_ARCH=YES test | xcpretty -c
+  - xcodebuild -workspace SnappingStepperExample.xcworkspace -scheme Tests -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6,OS=9.0" -configuration Release GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES ONLY_ACTIVE_ARCH=YES test | xcpretty -c
 after_success:
   - bash <(curl -s https://codecov.io/bash)
