Using StyledLabel pod Fixed background style masking Fixed symbol label background color issue Added format string Added step factor for value sliding

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,10 +1,11 @@
-platform :ios, '9.0'
+platform :ios, '10.0'
 
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
 def shared_pods
   pod 'DynamicColor', '~> 3.1'
+  pod 'StyledLabel', '~> 2.0'
 end
 
 target 'SnappingStepper' do
